# idempotent-resource-ops

./: Cargo.toml  readme.md  rust-toolchain.toml
src/: lib.rs
