[package]
name = "idempotency-middleware"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]

[dev-dependencies]
time = { version = "0.3.17", default-features = false, features = ["std"] }
