[package]
name = "idempotent-resource-ops"
version = "0.0.1"
edition = "2021"
rust-version = "1.60"
description = "A set of functions to provide stateless idempotent requests based on resource metadata"
license = "MIT"
license-file = "LICENSE"
authors = ["Caio Oliveira <caio.vsoliveira23@gmail.com>"]
repository = "https://github.com/CaioOliveira793/idempotent-resource-ops"
readme = "readme.md"
categories = ["web-programming", "algorithms"]
keywords = ["idempotency", "HTTP", "REST", "web"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]

[dev-dependencies]
time = { version = "0.3.17", default-features = false, features = ["std"] }
